--- a/website/package.json
+++ b/website/package.json
@@ -12,12 +12,13 @@
     "pretty": "prettier --write ."
   },
   "devDependencies": {
-    "@astrojs/image": "^0.3.3",
+    "@astrojs/image": "^0.5.0",
     "@astrojs/rss": "^1.0.0",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^1.0.0",
-    "@tailwindcss/typography": "^0.5.4",
-    "astro": "^1.0.0",
+    "@tailwindcss/typography": "^0.5.7",
+    "astro": "^1.1.5",
+    "pagefind": "^0.8.0",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.5.0",
     "reading-time": "^1.5.0"
