--- a/.github/workflows/build_website.yml
+++ b/.github/workflows/build_website.yml
@@ -29,7 +29,9 @@ jobs:
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+           fetch-depth: 0
 
 
       - uses: actions/setup-python@v4
