fix: update astro

--- a/.github/workflows/build_website.yml
+++ b/.github/workflows/build_website.yml
@@ -60,7 +60,9 @@ jobs:
           git commit -m "add files"
 
       - name: Push changes
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: ad-m/github-push-action@master
+        # if branch is main, push to main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
