fix: switch to bloomberg

--- a/website/src/data/mk_config.json
+++ b/website/src/data/mk_config.json
@@ -2,9 +2,10 @@
     "cts": {
         "categories": [
             {
-                "table_name": "dp8PhLsUcFE",
+                "table_name": "Bloomberg",
                 "label": "Bloomberg Markets",
                 "csv_prefix": "bloomberg"
+                
             },
             {
                 "table_name": "YahooFinance",
