--- a/.github/workflows/build_website.yml
+++ b/.github/workflows/build_website.yml
@@ -18,7 +18,7 @@ on:
 
   schedule:
     # Runs at 22:30 UTC every day
-    - cron: '30 23/10 * * *' # Runs at 23:30 UTC every day
+    - cron: '30 2-20/10 * * *' # Runs at 23:30 UTC every day
 
   # Allows you to run this workflow manually from the Actions tab.
   workflow_dispatch:
