--- a/website/package.json
+++ b/website/package.json
@@ -15,12 +15,15 @@
     "@astrojs/image": "^0.5.0",
     "@astrojs/rss": "^1.0.2",
     "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^2.0.2",
+    "@astrojs/tailwind": "^2.1.0",
     "@tailwindcss/typography": "^0.5.7",
     "astro": "^1.4.7",
     "pagefind": "^0.8.0",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.5.0",
     "reading-time": "^1.5.0"
+  },
+  "dependencies": {
+    "tailwindcss": "^3.1.8"
   }
 }
